// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render custom polling 1`] = `
.c15 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 18px;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #2C3A73;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-top: 24px;
  padding: 16px;
  border-radius: 8px;
  border-radius: 8px;
}

.c2 {
  box-sizing: border-box;
  margin-top: 8px;
  margin-bottom: 4px;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c5 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c7 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 0;
}

.c8 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  padding-right: 16px;
}

.c9 {
  display: flex;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c14 .icon-check {
  display: none;
}

.c14 .icon-copy {
  display: block;
}

.c14.copied .icon-check {
  display: block;
}

.c14.copied .icon-copy {
  display: none;
}

.c13 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c6 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c4 {
  position: relative;
}

.c11 {
  position: absolute;
  right: 0px;
}

.c17 {
  display: flex;
  align-items: center;
}

.c17 .icon {
  margin-right: 8px;
}

.c1 {
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #2F3659;
}

.c18 {
  white-space: pre;
}

<div>
  <div
    class="c0 c1"
  >
    <div>
      Custom Header Component
    </div>
    <div
      class="c2"
    >
      <div
        class="c3 c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8 c9"
            >
              <div
                class="c8 c9"
              >
                <div
                  class="c5"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  some kind of command
                </div>
              </div>
              <div
                class="c10 c11"
              >
                <button
                  class="c12 c13"
                  kind="secondary"
                >
                  <div
                    class="c14 icon-container"
                  >
                    <span
                      class="c15 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c15 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c16 c17 c18"
    >
      <span
        class="c19 icon icon-restore "
        color="light"
        font-size="4"
      />
      <span>
        custom polling text  |  
         
        00
        :
        00
      </span>
    </div>
  </div>
</div>
`;

exports[`render custom polling error 1`] = `
.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #f50057;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-top: 24px;
  padding: 16px;
  border-radius: 8px;
  border-radius: 8px;
}

.c3 {
  box-sizing: border-box;
  margin-top: 8px;
  margin-bottom: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c6 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c8 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 0;
}

.c9 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  padding-right: 16px;
}

.c10 {
  display: flex;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin-top: 24px;
}

.c15 .icon-check {
  display: none;
}

.c15 .icon-copy {
  display: block;
}

.c15.copied .icon-check {
  display: block;
}

.c15.copied .icon-copy {
  display: none;
}

.c14 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c7 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c5 {
  position: relative;
}

.c12 {
  position: absolute;
  right: 0px;
}

.c18 {
  display: flex;
  align-items: center;
}

.c18 .icon {
  margin-right: 8px;
}

.c1 {
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #f50057;
}

.c21 {
  margin-top: 6px;
  margin-bottom: 0;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      Command
    </div>
    <div
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9 c10"
            >
              <div
                class="c9 c10"
              >
                <div
                  class="c6"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  some kind of command
                </div>
              </div>
              <div
                class="c11 c12"
              >
                <button
                  class="c13 c14"
                  kind="secondary"
                >
                  <div
                    class="c15 icon-container"
                  >
                    <span
                      class="c16 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c16 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c9"
    >
      <div
        class="c17 c18"
      >
        <span
          class="c19 icon icon-warning "
          color="danger"
        />
        custom error content
      </div>
      <div
        class="c20"
      >
        Possible reasons
      </div>
      <ul
        class="c21"
      >
        <li>
          error reason 1
        </li>
        <li>
          error reason 2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`render custom polling success 1`] = `
.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #00bfa5;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-top: 24px;
  padding: 16px;
  border-radius: 8px;
  border-radius: 8px;
}

.c3 {
  box-sizing: border-box;
  margin-top: 8px;
  margin-bottom: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c6 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c8 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 0;
}

.c9 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  padding-right: 16px;
}

.c10 {
  display: flex;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c15 .icon-check {
  display: none;
}

.c15 .icon-copy {
  display: block;
}

.c15.copied .icon-check {
  display: block;
}

.c15.copied .icon-copy {
  display: none;
}

.c14 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c7 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c5 {
  position: relative;
}

.c12 {
  position: absolute;
  right: 0px;
}

.c18 {
  display: flex;
  align-items: center;
}

.c18 .icon {
  margin-right: 8px;
}

.c1 {
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #00bfa5;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      Command
    </div>
    <div
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9 c10"
            >
              <div
                class="c9 c10"
              >
                <div
                  class="c6"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  some kind of command
                </div>
              </div>
              <div
                class="c11 c12"
              >
                <button
                  class="c13 c14"
                  kind="secondary"
                >
                  <div
                    class="c15 icon-container"
                  >
                    <span
                      class="c16 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c16 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c17 c18"
    >
      <span
        class="c19 icon icon-checkmark-circle "
        color="success"
      />
      custom polling success text
    </div>
  </div>
</div>
`;

exports[`render default polling 1`] = `
.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c20 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 18px;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-top: 24px;
  padding: 16px;
  border-radius: 8px;
  border-radius: 8px;
}

.c3 {
  box-sizing: border-box;
  margin-top: 8px;
  margin-bottom: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c6 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c8 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 0;
}

.c9 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  padding-right: 16px;
}

.c10 {
  display: flex;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c15 .icon-check {
  display: none;
}

.c15 .icon-copy {
  display: block;
}

.c15.copied .icon-check {
  display: block;
}

.c15.copied .icon-copy {
  display: none;
}

.c14 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c7 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c5 {
  position: relative;
}

.c12 {
  position: absolute;
  right: 0px;
}

.c18 {
  display: flex;
  align-items: center;
}

.c18 .icon {
  margin-right: 8px;
}

.c1 {
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #2F3659;
}

.c19 {
  white-space: pre;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      Command
    </div>
    <div
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9 c10"
            >
              <div
                class="c9 c10"
              >
                <div
                  class="c6"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  some kind of command
                </div>
              </div>
              <div
                class="c11 c12"
              >
                <button
                  class="c13 c14"
                  kind="secondary"
                >
                  <div
                    class="c15 icon-container"
                  >
                    <span
                      class="c16 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c16 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c17 c18 c19"
    >
      <span
        class="c20 icon icon-restore "
        color="light"
        font-size="4"
      />
      <span>
        Waiting for Teleport Service  |  
         
        00
        :
        00
      </span>
    </div>
  </div>
</div>
`;

exports[`render default polling error 1`] = `
.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #f50057;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-top: 24px;
  padding: 16px;
  border-radius: 8px;
  border-radius: 8px;
}

.c3 {
  box-sizing: border-box;
  margin-top: 8px;
  margin-bottom: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c6 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c8 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 0;
}

.c9 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  padding-right: 16px;
}

.c10 {
  display: flex;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin-top: 24px;
}

.c15 .icon-check {
  display: none;
}

.c15 .icon-copy {
  display: block;
}

.c15.copied .icon-check {
  display: block;
}

.c15.copied .icon-copy {
  display: none;
}

.c14 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c7 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c5 {
  position: relative;
}

.c12 {
  position: absolute;
  right: 0px;
}

.c18 {
  display: flex;
  align-items: center;
}

.c18 .icon {
  margin-right: 8px;
}

.c1 {
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #f50057;
}

.c21 {
  margin-top: 6px;
  margin-bottom: 0;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      Command
    </div>
    <div
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9 c10"
            >
              <div
                class="c9 c10"
              >
                <div
                  class="c6"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  some kind of command
                </div>
              </div>
              <div
                class="c11 c12"
              >
                <button
                  class="c13 c14"
                  kind="secondary"
                >
                  <div
                    class="c15 icon-container"
                  >
                    <span
                      class="c16 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c16 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c9"
    >
      <div
        class="c17 c18"
      >
        <span
          class="c19 icon icon-warning "
          color="danger"
        />
        We could not detect the Teleport Service you were trying to add
      </div>
      <div
        class="c20"
      >
        Possible reasons
      </div>
      <ul
        class="c21"
      >
        <li>
          error reason 1
        </li>
        <li>
          error reason 2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`render default polling success 1`] = `
.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #00bfa5;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-top: 24px;
  padding: 16px;
  border-radius: 8px;
  border-radius: 8px;
}

.c3 {
  box-sizing: border-box;
  margin-top: 8px;
  margin-bottom: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c6 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c8 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 0;
}

.c9 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  padding-right: 16px;
}

.c10 {
  display: flex;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c15 .icon-check {
  display: none;
}

.c15 .icon-copy {
  display: block;
}

.c15.copied .icon-check {
  display: block;
}

.c15.copied .icon-copy {
  display: none;
}

.c14 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c7 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c5 {
  position: relative;
}

.c12 {
  position: absolute;
  right: 0px;
}

.c18 {
  display: flex;
  align-items: center;
}

.c18 .icon {
  margin-right: 8px;
}

.c1 {
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #00bfa5;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      Command
    </div>
    <div
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9 c10"
            >
              <div
                class="c9 c10"
              >
                <div
                  class="c6"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  some kind of command
                </div>
              </div>
              <div
                class="c11 c12"
              >
                <button
                  class="c13 c14"
                  kind="secondary"
                >
                  <div
                    class="c15 icon-container"
                  >
                    <span
                      class="c16 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c16 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c17 c18"
    >
      <span
        class="c19 icon icon-checkmark-circle "
        color="success"
      />
      The Teleport Service successfully join this Teleport cluster
    </div>
  </div>
</div>
`;
